dodate i linkovane main komponente i dodat sticky bar

--- a/src/containers/News/News.scss
+++ b/src/containers/News/News.scss
@@ -1,9 +1,7 @@
-@import "../../index.scss";
-
-#contact {
+#news {
     width: 100%;
     height: 1000px;
-    background-color: #4c684f;
+    background-color: #273050;
     text-align: center;
     color: #d3d3d3;
     padding-top: 120px;
