--- a/src/containers/Photos/Photos.scss
+++ b/src/containers/Photos/Photos.scss
@@ -1,9 +1,7 @@
-@import "../../index.scss";
-
-#contact {
+#photos {
     width: 100%;
     height: 1000px;
-    background-color: #4c684f;
+    background-color: #50272e;
     text-align: center;
     color: #d3d3d3;
     padding-top: 120px;
